# fhadmin

./: .gitignore  CHANGELOG.md  README.md  core.html  core.html.md  index.html  index.html.md  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.fh-heroicons/: chart-bar_outline  trash_outline
fhadmin/: _modidx.py  core.py
nbs/: 00_core.ipynb  index.ipynb  nbdev.yml
nbs/.fh-heroicons/: arrow-left_outline  arrow-right-on-rectangle_outline  lock-closed_outline
